[gd_scene load_steps=4 format=3 uid="uid://c84lhgr2mt0t6"]

[ext_resource type="PackedScene" uid="uid://cv01wsrrw1qvh" path="res://global/panels/global_info_panel.tscn" id="1_y1ohc"]
[ext_resource type="Script" path="res://global/panels/attack_global_info_panel.gd" id="2_50wya"]
[ext_resource type="FontFile" uid="uid://c1mgwsb6wtd8q" path="res://fonts/shogunate/ShogunateCondensed-nRxWY.otf" id="3_wr8um"]

[node name="AttackGlobalInfoPanel" instance=ExtResource("1_y1ohc")]
script = ExtResource("2_50wya")

[node name="AttackLabel" type="Label" parent="PanelContainer/GridContainer" index="0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "Attack: "

[node name="AttackValueLabel" type="Label" parent="PanelContainer/GridContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "Attack name"

[node name="DateLabel" type="Label" parent="PanelContainer/GridContainer" index="2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "Date:"

[node name="DateValueLabel" type="Label" parent="PanelContainer/GridContainer" index="3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "Date value"

[node name="ETALabel" type="Label" parent="PanelContainer/GridContainer" index="4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "ETA:"

[node name="ETAValueLabel" type="Label" parent="PanelContainer/GridContainer" index="5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wr8um")
theme_override_font_sizes/font_size = 20
text = "ETA value"
